--- a/POS/pos.html
+++ b/POS/pos.html
@@ -95,7 +95,7 @@
                 <!-- Category Filter -->
                 <div class="category-filter">
                     <div class="category-tabs">
-                        <button class="category-tab active" data-category="all">
+                        <button class="category-tab actives" data-category="all">
                             <i class="fas fa-th-large"></i>
                             <span>All Products</span>
                         </button>
