--- a/POS/pos.html
+++ b/POS/pos.html
@@ -62,7 +62,7 @@
                     <span>Senior Cashier</span>
                 </div>
             </div>
-            <a href="#" class="logout-btn">
+            <a href="#" class="logout-btn" onclick="logout()">
                 <i class="fas fa-sign-out-alt"></i>
                 <span>Logout</span>
             </a>
