--- a/POS/pos.html
+++ b/POS/pos.html
@@ -20,16 +20,16 @@
         </div>
 
         <ul class="sidebar-nav">
-            <li class="nav-item active">
+            <li class="nav-item nav-pos active" onclick="showTab('pos')">
                 <a href="#" class="nav-link">
                     <i class="fas fa-cash-register"></i>
                     <span>POS</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item nav-reservation" onclick="showTab('reservation')">
                 <a href="#" class="nav-link">
                     <i class="fas fa-user-tie"></i>
-                    <span>Cashier</span>
+                    <span>Reservations</span>
                 </a>
             </li>
             <li class="nav-item">
@@ -71,7 +71,7 @@
 
     <!-- Main Content Area -->
     <main class="main-content">
-        <!-- Header -->
+        <!-- Header (shared) -->
         <header class="header">
             <div class="header-left">
                 <h1 class="main-title">Point of Sale</h1>
@@ -88,7 +88,8 @@
             </div>
         </header>
 
-        <div class="main-content-wrapper">
+        <!-- POS Tab -->
+        <div class="main-content-wrapper" id="tab-pos">
             <!-- Products Section -->
             <section class="products-section">
                 <!-- Category Filter -->
@@ -129,8 +130,101 @@
                 </div>
             </section>
         </div>
+
+        <!-- Reservation Tab -->
+        <div class="main-content-wrapper reservation-full" id="tab-reservation" style="display:none;">
+            <section class="reservation-section">
+                <!-- Top Cards -->
+                <div class="reservation-cards">
+                    <div class="reservation-card expiring-soon">
+                        <div class="card-title">Expiring Soon</div>
+                        <div class="card-value" id="card-expiring-soon">5</div>
+                    </div>
+                    <div class="reservation-card expiring-today">
+                        <div class="card-title">Expiring Today</div>
+                        <div class="card-value" id="card-expiring-today">2</div>
+                    </div>
+                    <div class="reservation-card total-reservations">
+                        <div class="card-title">Total Reservations</div>
+                        <div class="card-value" id="card-total-reservations">18</div>
+                    </div>
+                </div>
+                <!-- Search and Category Tabs -->
+                <div class="reservation-filter">
+                    <div class="search-container">
+                        <div class="search-box">
+                            <i class="fas fa-search"></i>
+                            <input type="text" id="reservation-search" placeholder="Search reservations by name, email, or product...">
+                            <button class="clear-search" id="clear-reservation-search">
+                                <i class="fas fa-times"></i>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="reservation-tabs">
+                        <button class="reservation-tab active" data-status="all">All Status</button>
+                        <button class="reservation-tab" data-status="pending">Pending</button>
+                        <button class="reservation-tab" data-status="completed">Completed</button>
+                        <button class="reservation-tab" data-status="cancelled">Cancelled</button>
+                    </div>
+                </div>
+                <!-- Reservation Table -->
+                <div class="reservation-table-wrapper">
+                    <table class="reservation-table">
+                        <thead>
+                            <tr>
+                                <th>ReservationID</th>
+                                <th>Name</th>
+                                <th>Email</th>
+                                <th>Phone Number</th>
+                                <th>Reserved Product(s)</th>
+                                <th>Date Reserved</th>
+                                <th>Pickup Date</th>
+                                <th>Status</th>
+                                <th>Days Left/Elapsed</th>
+                            </tr>
+                        </thead>
+                        <tbody id="reservation-table-body">
+                            <!-- Sample Data Rows -->
+                            <tr>
+                                <td>R-1001</td>
+                                <td>John Doe</td>
+                                <td>john@example.com</td>
+                                <td>09171234567</td>
+                                <td>Nike Air Max 270, Adidas Ultraboost 22</td>
+                                <td>2025-09-01</td>
+                                <td>2025-09-06</td>
+                                <td>Pending</td>
+                                <td>1 day left</td>
+                            </tr>
+                            <tr>
+                                <td>R-1002</td>
+                                <td>Jane Smith</td>
+                                <td>jane@example.com</td>
+                                <td>09181234567</td>
+                                <td>Puma RS-X</td>
+                                <td>2025-09-02</td>
+                                <td>2025-09-05</td>
+                                <td>Completed</td>
+                                <td>Picked up</td>
+                            </tr>
+                            <tr>
+                                <td>R-1003</td>
+                                <td>Mark Lee</td>
+                                <td>mark@example.com</td>
+                                <td>09191234567</td>
+                                <td>Converse Chuck Taylor</td>
+                                <td>2025-08-28</td>
+                                <td>2025-09-03</td>
+                                <td>Cancelled</td>
+                                <td>2 days since cancelled</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </div>
         <!-- Cart Sidebar -->
-        <aside class="cart-sidebar">
+        <aside class="cart-sidebar" id="cart-sidebar">
             <div class="cart-header">
                 <h2><i class="fas fa-shopping-cart"></i> Shopping Cart</h2>
                 <button class="clear-cart-btn" id="clear-cart">
