--- a/INV/inventory.html
+++ b/INV/inventory.html
@@ -89,10 +89,10 @@
                     <div id="product-details-modal" class="modal" style="max-width: 600px; display:none;">
                         <div class="modal-content" style="max-width:100%; min-height:400px; display:flex; flex-direction:column;">
                             <div class="modal-header" style="display:flex;align-items:center;justify-content:space-between; border-bottom:1px solid #e2e8f0; padding:24px 32px 12px 32px;">
-                                <h3 style="margin:0; font-size:1.6rem; font-weight:700;">Product Details</h3>
-                                <button class="close-btn" style="font-size:1.5rem; color:#718096; background:none; border:none; cursor:pointer;" onclick="document.getElementById('product-details-modal').style.display='none';document.getElementById('modal-overlay').classList.remove('active');document.getElementById('modal-overlay').style.display='none';">&times;</button>
+                                <h3 style="margin:0; font-size:1.28rem; font-weight:700;">Product Details</h3>
+                                <button class="close-btn" style="font-size:1.2rem; color:#718096; background:none; border:none; cursor:pointer;" onclick="document.getElementById('product-details-modal').style.display='none';document.getElementById('modal-overlay').classList.remove('active');document.getElementById('modal-overlay').style.display='none';">&times;</button>
                             </div>
-                            <div id="product-details-content" style="display:flex; flex-direction:row; gap:40px; margin:32px; align-items:center; justify-content:flex-start; min-height:320px;">
+                            <div id="product-details-content" style="display:flex; flex-direction:row; gap:40px; margin:32px; align-items:center; justify-content:flex-start; min-height:320px;font-size: 1.2rem;">
                                 <!-- Details will be injected by JS -->
                             </div>
                         </div>
@@ -108,16 +108,16 @@
                         </div>
                     </div>
                     <div class="toggle">
-                        <button id="toggle-card-view" style="position:absolute;right: 20px; bottom: 20px; z-index:10;background:#2a6aff;color:#fff;border:none;border-radius:50%;width:48px;height:48px;display:flex;align-items:center;justify-content:center;box-shadow:0 2px 8px rgba(67,56,202,0.18);font-size:1.5rem;cursor:pointer;">
+                        <button id="toggle-card-view" style="position:absolute;right: 20px; bottom: 20px; z-index:10;background:#2a6aff;color:#fff;border:none;border-radius:50%;width:48px;height:48px;display:flex;align-items:center;justify-content:center;box-shadow:0 2px 8px rgba(67,56,202,0.18);font-size:1.2rem;cursor:pointer;">
                             <i class="fas fa-th-large" id="toggle-card-icon"></i>
                         </button>
                     </div>
-                    <div class="add-inventory-list" style="position:relative; display: flex; flex-wrap: wrap; gap: 44px; align-items: flex-start; justify-content: flex-start;">
+                    <div class="add-inventory-list" style="position:relative; display: flex; flex-wrap: wrap; gap: 24px; align-items: flex-start; justify-content: flex-start;">
                         
                         <!-- Add Product Card/Button -->
                         <div class="add-product-card" style="min-width:240px;max-width:240px;height:280px;display:flex;flex-direction:column;align-items:center;justify-content:center;border:2px dashed #a3bffa;border-radius:16px;cursor:pointer;background:#f7fafc;box-shadow:0 2px 8px rgba(67,56,202,0.08);" onclick="openAddProductModal()">
-                            <i class="fas fa-plus" style="font-size:2.5rem;color:#2a6aff;"></i>
-                            <span style="margin-top:12px;font-size:1.1rem;color:#2a6aff;font-weight:600;">Add Product</span>
+                            <i class="fas fa-plus" style="font-size:2rem;color:#2a6aff;"></i>
+                            <span style="margin-top:12px;font-size:1.2rem;color:#2a6aff;font-weight:600;">Add Product</span>
                         </div>
                         <!-- Mock Product Cards (Image, Name, Size, Color, Stock) -->
                         <div class="product-card" 
@@ -130,13 +130,13 @@
                             data-colors="Black, White" 
                             style="min-width:240px;max-width:240px;height:280px;display:flex;flex-direction:column;align-items:center;justify-content:center;border-radius:16px;background:#fff;box-shadow:0 2px 8px rgba(67,56,202,0.08);padding:18px;cursor:pointer;" onclick="openProductDetailsModal('Nike Air Max 270')">
                             <div style="width:128px;height:128px;background:#e2e8f0;border-radius:12px;display:flex;align-items:center;justify-content:center;margin-bottom:12px;">
-                                <i class="fas fa-image" style="font-size:4rem;color:#a0aec0;"></i>
+                                <i class="fas fa-image" style="font-size:3.2rem;color:#a0aec0;"></i>
                             </div>
-                            <div style="font-weight:700;font-size:1.1rem;text-align:center;">Nike Air Max 270</div>
-                            <div style="font-size:0.95rem;color:#4a5568;text-align:center;margin-top:4px;">Size: 7, 8, 9, 10</div>
-                            <div style="font-size:0.95rem;color:#4a5568;text-align:center;">Color: Black, White</div>
-                            <div style="font-size:0.95rem;color:#2a6aff;text-align:center;margin-top:4px;">Stock: 12</div>
-                            <button type="button" class="btn btn-primary browse-btn" style="display:flex;align-items:center;justify-content:center;min-width:120px;height:36px;border-radius:8px;font-size:1rem;margin-top:16px;padding:0;" onclick="openUpdateProductModal('Nike Air Max 270')">Update</button>
+                            <div style="font-weight:700;font-size:0.88rem;text-align:center;">Nike Air Max 270</div>
+                            <div style="font-size:0.8rem;color:#4a5568;text-align:center;margin-top:4px;">Size: 7, 8, 9, 10</div>
+                            <div style="font-size:0.8rem;color:#4a5568;text-align:center;">Color: Black, White</div>
+                            <div style="font-size:0.8rem;color:#2a6aff;text-align:center;margin-top:4px;">Stock: 12</div>
+                            <button type="button" class="btn btn-primary browse-btn" style="display:flex;align-items:center;justify-content:center;min-width:120px;height:36px;border-radius:8px;font-size:0.8rem;margin-top:16px;padding:0;" onclick="openUpdateProductModal('Nike Air Max 270')">Update</button>
                         </div>
                         <div class="product-card" 
                             data-name="Adidas Ultraboost 22" 
@@ -150,10 +150,10 @@
                             <div style="width:128px;height:128px;background:#e2e8f0;border-radius:12px;display:flex;align-items:center;justify-content:center;margin-bottom:12px;">
                                 <i class="fas fa-image" style="font-size:4rem;color:#a0aec0;"></i>
                             </div>
-                            <div style="font-weight:700;font-size:1.1rem;text-align:center;">Adidas Ultraboost 22</div>
-                            <div style="font-size:0.95rem;color:#4a5568;text-align:center;margin-top:4px;">Size: 8, 9, 10, 11</div>
-                            <div style="font-size:0.95rem;color:#4a5568;text-align:center;">Color: Blue, White</div>
-                            <div style="font-size:0.95rem;color:#2a6aff;text-align:center;margin-top:4px;">Stock: 8</div>
+                            <div style="font-weight:700;font-size:0.88rem;text-align:center;">Adidas Ultraboost 22</div>
+                            <div style="font-size:0.8rem;color:#4a5568;text-align:center;margin-top:4px;">Size: 8, 9, 10, 11</div>
+                            <div style="font-size:0.8rem;color:#4a5568;text-align:center;">Color: Blue, White</div>
+                            <div style="font-size:0.8rem;color:#2a6aff;text-align:center;margin-top:4px;">Stock: 8</div>
                             <button type="button" class="btn btn-primary browse-btn" style="display:flex;align-items:center;justify-content:center;min-width:120px;height:36px;border-radius:8px;font-size:1rem;margin-top:16px;padding:0;" onclick="openUpdateProductModal('Adidas Ultraboost 22')">Update</button>
                         </div>
                         <div class="product-card" 
@@ -168,10 +168,10 @@
                             <div style="width:128px;height:128px;background:#e2e8f0;border-radius:12px;display:flex;align-items:center;justify-content:center;margin-bottom:12px;">
                                 <i class="fas fa-image" style="font-size:4rem;color:#a0aec0;"></i>
                             </div>
-                            <div style="font-weight:700;font-size:1.1rem;text-align:center;">Converse Chuck Taylor</div>
-                            <div style="font-size:0.95rem;color:#4a5568;text-align:center;margin-top:4px;">Size: 6, 7, 8, 9</div>
-                            <div style="font-size:0.95rem;color:#4a5568;text-align:center;">Color: Red, Black</div>
-                            <div style="font-size:0.95rem;color:#2a6aff;text-align:center;margin-top:4px;">Stock: 20</div>
+                            <div style="font-weight:700;font-size:0.88rem;text-align:center;">Converse Chuck Taylor</div>
+                            <div style="font-size:0.8rem;color:#4a5568;text-align:center;margin-top:4px;">Size: 6, 7, 8, 9</div>
+                            <div style="font-size:0.8rem;color:#4a5568;text-align:center;">Color: Red, Black</div>
+                            <div style="font-size:0.8rem;color:#2a6aff;text-align:center;margin-top:4px;">Stock: 20</div>
                             <button type="button" class="btn btn-primary browse-btn" style="display:flex;align-items:center;justify-content:center;min-width:120px;height:36px;border-radius:8px;font-size:1rem;margin-top:16px;padding:0;" onclick="openUpdateProductModal('Converse Chuck Taylor')">Update</button>
                         </div>
                     </div>
@@ -578,29 +578,29 @@
                     <div class="info-title" style="font-weight:600; font-size:1.1rem; margin-bottom:12px;">Inventory item Information</div>
                     <div class="form-group">
                         <label for="product-name">Product Name</label>
-                        <input type="text" id="product-name" placeholder="Please enter an item." required>
+                        <input type="text" id="product-name" placeholder="Please enter item name." required style="font-size: 1rem;">
                     </div>
                     <div class="form-group">
                         <label for="product-brand">Brand</label>
-                        <input type="text" id="product-brand" placeholder="Please enter an item.">
+                        <input type="text" id="product-brand" placeholder="Please enter brand name." style="font-size: 1rem;">
                     </div>
                     <div class="form-group">
                         <label for="product-stock">Stock</label>
-                        <input type="number" id="product-stock" min="0" placeholder="Please enter an item." required>
+                        <input type="number" id="product-stock" min="0" placeholder="Please enter quantity." required style="font-size: 1rem;">
                     </div>
                     <div class="form-group">
                         <label for="product-category">Category</label>
-                        <input type="text" id="product-category" placeholder="Please enter an item." required>
+                        <input type="text" id="product-category" placeholder="Please enter category" required style="font-size: 1rem;">
                     </div>
                     <div class="form-group">
                         <label for="product-price">Price</label>
-                        <input type="number" id="product-price" min="0" step="0.01" placeholder="Please enter an item." required>
+                        <input type="number" id="product-price" min="0" step="0.01" placeholder="Please enter item price" required style="font-size: 1rem;">
                     </div>
                     <div class="form-group">
                             <label for="product-size-tags">Sizes</label>
                             <div id="product-size-tags" style="display:flex;flex-wrap:wrap;gap:8px;padding:6px 0;border:1px solid #e2e8f0;border-radius:6px;background:#f7fafc;min-height:38px;margin-bottom:6px;width:100%;"></div>
                             <div style="position:relative;display:flex;align-items:center;margin-bottom:12px;width:100%;">
-                                <input type="text" id="product-size-input" placeholder="Type size and press Enter" style="width:100%;padding-right:36px;">
+                                <input type="text" id="product-size-input" placeholder="Type size and press Enter" style="width:100%;padding-right:36px;font-size:1rem;">
                                 <button type="button" id="product-size-enter" style="position:absolute;right:10px;top:50%;transform:translateY(-50%);background:none;border:none;cursor:pointer;color:#2a6aff;padding:0;">
                                     <i class="fas fa-arrow-up"></i>
                                 </button>
@@ -608,9 +608,9 @@
                     </div>
                     <div class="form-group">
                             <label for="product-color-tags">Colors</label>
-                            <div id="product-color-tags" style="display:flex;flex-wrap:wrap;gap:8px;padding:6px 0;border:1px solid #e2e8f0;border-radius:6px;background:#f7fafc;min-height:38px;margin-bottom:6px;width:100%;"></div>
+                            <div id="product-color-tags" style="font-size:1rem;display:flex;flex-wrap:wrap;gap:8px;padding:6px 0;border:1px solid #e2e8f0;border-radius:6px;background:#f7fafc;min-height:38px;margin-bottom:6px;width:100%;"></div>
                             <div style="position:relative;display:flex;align-items:center;width:100%;">
-                                <input type="text" id="product-color-input" placeholder="Type color and press Enter" style="width:100%;padding-right:36px;">
+                                <input type="text" id="product-color-input" placeholder="Type color and press Enter" style="width:100%;padding-right:36px;font-size:1rem;">
                                 <button type="button" id="product-color-enter" style="position:absolute;right:10px;top:50%;transform:translateY(-50%);background:none;border:none;cursor:pointer;color:#2a6aff;padding:0;">
                                     <i class="fas fa-arrow-up"></i>
                                 </button>
@@ -618,7 +618,7 @@
                     </div>
                     <div style="flex:1;"></div>
                     <div class="modal-create" style="margin-top:18px; display:flex; justify-content:flex-end;">
-                        <button type="submit" class="btn btn-primary browse-btn" style="min-width:220px;max-width:220px;height:40px;font-size:0.8rem;font-weight:600;border-radius:16px;display:flex;align-items:center;justify-content:center;">Add Product</button>
+                        <button type="submit" class="btn btn-primary browse-btn" style="min-width:220px;max-width:220px;height:40px;font-size:0.88rem;font-weight:600;border-radius:16px;display:flex;align-items:center;justify-content:center;">Add Product</button>
                     </div>
                 </div>
             </form>
