--- a/INV/inventory.html
+++ b/INV/inventory.html
@@ -590,14 +590,14 @@
                         <input type="number" id="product-price" min="0" step="0.01" placeholder="Please enter item price" required style="font-size: 1rem;">
                     </div>
                     <div class="form-group">
-                            <label for="product-size-tags">Sizes</label>
-                            <div id="product-size-tags" style="font-size:1rem;display:flex;flex-wrap:wrap;gap:8px;padding:6px 0;border:1px solid #e2e8f0;border-radius:6px;background:#f7fafc;min-height:38px;margin-bottom:6px;width:100%;"></div>
-                            <div style="position:relative;display:flex;align-items:center;margin-bottom:12px;width:100%;">
-                                <input type="text" id="product-size-input" placeholder="Type size and press Enter" style="width:100%;padding-right:36px;font-size:1rem;">
-                                <button type="button" id="product-size-enter" style="position:absolute;right:10px;top:50%;transform:translateY(-50%);background:none;border:none;cursor:pointer;color:#2a6aff;padding:0;">
-                                    <i class="fas fa-arrow-up"></i>
-                                </button>
-                            </div>
+                        <label for="product-size-tags">Sizes</label>
+                        <div id="product-size-tags" style="font-size:1rem;display:flex;flex-wrap:wrap;gap:8px;padding:6px 0;border:1px solid #e2e8f0;border-radius:6px;background:#f7fafc;min-height:38px;margin-bottom:6px;width:100%;"></div>
+                        <div style="position:relative;display:flex;align-items:center;width:100%;">
+                            <input type="text" id="product-size-input" placeholder="Type size and press Enter" style="width:100%;padding-right:36px;font-size:1rem;">
+                            <button type="button" id="product-size-enter" style="position:absolute;right:10px;top:50%;transform:translateY(-50%);background:none;border:none;cursor:pointer;color:#2a6aff;padding:0;">
+                                <i class="fas fa-arrow-up"></i>
+                            </button>
+                        </div>
                     </div>
                     <div class="form-group">
                             <label for="product-color-tags">Colors</label>
